Avances con modelo

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,80 +12,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
+      "(99781, 3)\n"
      ]
     },
     {
-     "name": "stderr",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ItemID</th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>SentimentText;;;;;;;;</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>is so sad for my APL frie...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>I missed the New Moon trail...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>omg its already 7:30 :O;;;;;;;;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>.. Omgaga. Im sooo  im gunna CRy. I'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>i think mi bf is cheating on me!!!   ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ItemID  Sentiment                              SentimentText;;;;;;;;\n",
+       "0      1        0.0                       is so sad for my APL frie...\n",
+       "1      2        0.0                     I missed the New Moon trail...\n",
+       "2      3        1.0                    omg its already 7:30 :O;;;;;;;;\n",
+       "3      4        0.0            .. Omgaga. Im sooo  im gunna CRy. I'...\n",
+       "4      5        0.0           i think mi bf is cheating on me!!!   ..."
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('./train.csv', encoding='latin-1', delimiter=',', quotechar='\"')\n",
+    "print(data.shape)\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Cristian Aguirre\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\interactiveshell.py\", line 3460, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\Cristian Aguirre\\AppData\\Local\\Temp\\ipykernel_9100\\2869000093.py\", line 1, in <module>\n",
-      "    data = pd.read_csv('./train.csv', delimiter=',')\n",
-      "  File \"c:\\Users\\Cristian Aguirre\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\util\\_decorators.py\", line 311, in wrapper\n",
-      "    return func(*args, **kwargs)\n",
-      "  File \"c:\\Users\\Cristian Aguirre\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\io\\parsers\\readers.py\", line 680, in read_csv\n",
-      "    return _read(filepath_or_buffer, kwds)\n",
-      "  File \"c:\\Users\\Cristian Aguirre\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\io\\parsers\\readers.py\", line 575, in _read\n",
-      "    parser = TextFileReader(filepath_or_buffer, **kwds)\n",
-      "  File \"c:\\Users\\Cristian Aguirre\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\io\\parsers\\readers.py\", line 933, in __init__\n",
-      "    self._engine = self._make_engine(f, self.engine)\n",
-      "  File \"c:\\Users\\Cristian Aguirre\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\io\\parsers\\readers.py\", line 1235, in _make_engine\n",
-      "    return mapping[engine](f, **self.options)\n",
-      "  File \"c:\\Users\\Cristian Aguirre\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\io\\parsers\\c_parser_wrapper.py\", line 75, in __init__\n",
-      "    self._reader = parsers.TextReader(src, **kwds)\n",
-      "  File \"pandas\\_libs\\parsers.pyx\", line 544, in pandas._libs.parsers.TextReader.__cinit__\n",
-      "  File \"pandas\\_libs\\parsers.pyx\", line 633, in pandas._libs.parsers.TextReader._get_header\n",
-      "  File \"pandas\\_libs\\parsers.pyx\", line 847, in pandas._libs.parsers.TextReader._tokenize_rows\n",
-      "  File \"pandas\\_libs\\parsers.pyx\", line 1952, in pandas._libs.parsers.raise_parser_error\n",
-      "UnicodeDecodeError: 'utf-8' codec can't decode bytes in position 31175-31176: invalid continuation byte\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Cristian Aguirre\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\interactiveshell.py\", line 2057, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "  File \"C:\\Users\\Cristian Aguirre\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\ultratb.py\", line 1118, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "  File \"C:\\Users\\Cristian Aguirre\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\ultratb.py\", line 1012, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "  File \"C:\\Users\\Cristian Aguirre\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\ultratb.py\", line 865, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "  File \"C:\\Users\\Cristian Aguirre\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\ultratb.py\", line 818, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(r))\n",
-      "  File \"C:\\Users\\Cristian Aguirre\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\ultratb.py\", line 736, in format_record\n",
-      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
-      "  File \"C:\\Users\\Cristian Aguirre\\AppData\\Roaming\\Python\\Python310\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"C:\\Users\\Cristian Aguirre\\AppData\\Roaming\\Python\\Python310\\site-packages\\stack_data\\core.py\", line 734, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "  File \"C:\\Users\\Cristian Aguirre\\AppData\\Roaming\\Python\\Python310\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"C:\\Users\\Cristian Aguirre\\AppData\\Roaming\\Python\\Python310\\site-packages\\stack_data\\core.py\", line 677, in included_pieces\n",
-      "    scope_pieces = self.scope_pieces\n",
-      "  File \"C:\\Users\\Cristian Aguirre\\AppData\\Roaming\\Python\\Python310\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"C:\\Users\\Cristian Aguirre\\AppData\\Roaming\\Python\\Python310\\site-packages\\stack_data\\core.py\", line 614, in scope_pieces\n",
-      "    scope_start, scope_end = self.source.line_range(self.scope)\n",
-      "  File \"C:\\Users\\Cristian Aguirre\\AppData\\Roaming\\Python\\Python310\\site-packages\\stack_data\\core.py\", line 178, in line_range\n",
-      "    return line_range(self.asttext(), node)\n",
-      "AttributeError: 'Source' object has no attribute 'asttext'\n"
+      "1.0    41615\n",
+      "0.0    33424\n",
+      "Name: Sentiment, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "data = pd.read_csv('./train.csv', delimiter=',')\n",
-    "print(data.shape)\n",
-    "data.head()"
+    "# Obtener la distribución de clases\n",
+    "class_distribution = data['Sentiment'].value_counts()\n",
+    "\n",
+    "# Imprimir la distribución de clases\n",
+    "print(class_distribution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "minority_class_size = min(class_distribution)\n",
+    "\n",
+    "# Undersampling de la clase mayoritaria\n",
+    "undersampled_df = pd.concat([\n",
+    "    data[data['Sentiment'] == 0],\n",
+    "    data[data['Sentiment'] == 1].sample(minority_class_size, replace=True)\n",
+    "])\n",
+    "\n",
+    "new_class_distribution = undersampled_df['Sentiment'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0    33424\n",
+       "1.0    33424\n",
+       "Name: Sentiment, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_class_distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data =  data.rename(columns={'SentimentText;;;;;;;;': 'SentimentText'})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ItemID', 'Sentiment', 'SentimentText'], dtype='object')"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.73      0.71      0.72      6729\n",
+      "         1.0       0.77      0.79      0.78      8279\n",
+      "\n",
+      "    accuracy                           0.75     15008\n",
+      "   macro avg       0.75      0.75      0.75     15008\n",
+      "weighted avg       0.75      0.75      0.75     15008\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# Dividir los datos en características (X) y etiquetas (y)\n",
+    "X = data['SentimentText']\n",
+    "y = data['Sentiment']\n",
+    "\n",
+    "# Dividir los datos en conjuntos de entrenamiento y prueba\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Crear un vectorizador TF-IDF\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X_train_vectorized = vectorizer.fit_transform(X_train)\n",
+    "X_test_vectorized = vectorizer.transform(X_test)\n",
+    "\n",
+    "# Crear y entrenar el modelo de Bosque Aleatorio\n",
+    "rf_model = RandomForestClassifier()\n",
+    "rf_model.fit(X_train_vectorized, y_train)\n",
+    "\n",
+    "# Realizar predicciones en el conjunto de prueba\n",
+    "y_pred = rf_model.predict(X_test_vectorized)\n",
+    "\n",
+    "# Evaluar el rendimiento del modelo\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"I can't believe how poorly this game is designed. The controls are clunky, the graphics are outdated, and the gameplay is incredibly boring. I regret wasting my money on it.\"\n",
+    "new_text_vectorized = vectorizer.transform([text])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El sentimiento del texto es positivo.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Realizar la predicción del sentimiento del nuevo texto\n",
+    "predicted_sentiment = rf_model.predict(new_text_vectorized)[0]\n",
+    "\n",
+    "# Imprimir el resultado de la clasificación\n",
+    "if predicted_sentiment == 0:\n",
+    "    print(\"El sentimiento del texto es negativo.\")\n",
+    "else:\n",
+    "    print(\"El sentimiento del texto es positivo.\")"
    ]
   }
  ],
